--- a/index.html
+++ b/index.html
@@ -13,29 +13,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm" style="background-color: rgb(5, 255, 255);">
-      <div class="container">
-        <a class="navbar-brand" href="#">Harry & Ginny</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="A">A</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="D">D</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="F">F</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="A2">A</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm" style="background-color: #A2E4B8;">
     </nav>
     <!-- Akhir Navbar -->
 
